@startuml
'https://plantuml.com/class-diagram

/' dependency: parameter, return type, local variable, or exception thrown '/
/' inheritance: once got extend means inheritance i think '/
/' navigability: means A create B or smthing'/

/'
--|> inheritance
--> navigability/association
..> dependency
'/

abstract class Command {
    +execute(): void
}

class InputOnlyCommand {
    -input: String
    +InputOnlyCommand(input: String)
}

class RecommendCommand {
    -list: String
    +RecommendCommand(list: String)
    +getMessage(): String
    +execute(): void
}

class RecommendParser {
    +parse(input: String): RecommendCommand
}

class HealthBudException
class InvalidRecommendException

Command <|-- InputOnlyCommand

InputOnlyCommand <|-- RecommendCommand

RecommendParser ..> RecommendCommand : creates
RecommendCommand ..> HealthBudException : throws
RecommendCommand ..> InvalidRecommendException : throws

InvalidRecommendException --|> Exception
HealthBudException --|> Exception

@enduml
